# world_model

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_explore_grid_world.ipynb
scripts/: 01_collect_rollouts.py  02_train_vae.py  03_encode_dataset.py  04_train_rnn.py  05_train_controller.py  06_dream.py  07_visualize.py  play_interactive.py
tests/: test_controller.py  test_dream_engine.py  test_grid_world.py  test_pipeline.py  test_rnn.py  test_vae.py
world_model/: __init__.py
world_model/configs/: phase1_default.yaml
world_model/data/: __init__.py  datasets.py  rollout_collector.py
world_model/dreaming/: __init__.py  dream_engine.py
world_model/envs/: __init__.py  base_env.py  grid_world.py  rendering.py
world_model/models/: __init__.py  controller.py  rnn.py  vae.py
world_model/training/: __init__.py  train_controller.py  train_rnn.py  train_vae.py
world_model/utils/: config.py  logging_utils.py
world_model/visualization/: __init__.py  compare_view.py  interactive.py  plots.py
